# robot-optimizer

./: .env  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
models/: maze.xml  robot.xml  scene.xml
outputs/run_20260503_190456/: training_log.csv
outputs/run_20260503_190456/trajectories/: trajectory_iter_0001.npy  trajectory_iter_0010.npy  trajectory_iter_0020.npy  trajectory_iter_0030.npy  trajectory_iter_0040.npy  trajectory_iter_0050.npy  trajectory_iter_0060.npy  trajectory_iter_0070.npy  trajectory_iter_0080.npy  trajectory_iter_0090.npy  trajectory_iter_0100.npy  trajectory_iter_0110.npy  trajectory_iter_0120.npy  trajectory_iter_0130.npy  trajectory_iter_0140.npy  trajectory_iter_0150.npy  trajectory_iter_0160.npy  trajectory_iter_0170.npy  trajectory_iter_0180.npy  trajectory_iter_0190.npy  trajectory_iter_0200.npy  trajectory_iter_0210.npy
outputs/run_20260504_020715/: best_params.npy  final_params.npy  training_log.csv
outputs/run_20260504_020715/trajectories/: all_trajectories.npy  trajectory_iter_0040.npy  trajectory_iter_0050.npy  trajectory_iter_0060.npy  trajectory_iter_0070.npy  trajectory_iter_0080.npy  trajectory_iter_0090.npy  (+21 more)
scripts/: analyze_landscape.py  evaluate.py  plot_landscape.py  record_video.py  train.py
src/: __init__.py  control_policy.py  environment.py  loss_function.py  metrics_logging.py  motor_model.py  mujoco_compat.py  physics.py  simulation.py  video_recorder.py  walls.py
tests/: __init__.py  test_control_policy.py  test_impact.py  test_motor_model.py  test_physics.py
